[workspace]
members = ["arbiter", "collector", "echo", "killswitch", "lib", "quard", "waker"]
resolver = "3"

targets = ["x86_64-pc-windows-msvc", "x86_64-unknown-linux-gnu"]

[workspace.package]
authors = ["Taylan Dogan <git@taylandogan.info>"]
edition = "2024"
publish = false
version = "0.1.0"

[workspace.dependencies]
amiquip = { version = "0.4.2", default-features = false }
axum = { version = "0.8.4", features = ["http2", "json", "macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
axum-macros = "0.5.0"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
axum-prometheus = "0.8.0"
axum-tracing-opentelemetry = "0.29.0"
base64 = "0.22.1"
clap = { version = "4.5.42", features = ["derive", "env"] }
eyre = "0.6.12"
color-eyre = "0.6.5"
env_logger = "0.11.8"
dotenv = "0.15.0"
envy = "0.4.2"
lib = { path = "lib" }
opentelemetry = { version = "0.23.0", features = ["metrics", "trace"] }
opentelemetry-jaeger = { version = "0.22.0", features = [
    "collector_client",
    "rt-tokio",
] }
opentelemetry-otlp = { version = "0.16.0", features = [
    "metrics",
    "tonic",
    "trace",
] }
opentelemetry-semantic-conventions = "0.15.0"
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio", "trace"] }
reqwest = { version = "0.12", features = [
    "rustls-tls",
    "json",
], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9"
serenity = { version = "0.12", default-features = false, features = [
    "builder",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
] }
time = { version = "0.3.41", features = ["parsing", "serde"] }
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "time"] }
tokio-macros = "2.5.0"
tower = "0.5.2"
tracing = { version = "0.1.41", features = [
    "attributes",
    "release_max_level_info",
] }
tracing-core = "0.1.34"
tracing-futures = "0.2.5"
tracing-log = "0.2.0"
tracing-opentelemetry = "0.24"
tracing-serde = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "fmt",
    "json",
    "std",
    "time",
    "tracing-log",
] }
