[package]
name = "arbiter"

authors.workspace = true # This is a workspace-wide setting
edition.workspace = true # This is a workspace-wide setting
version.workspace = true # This is a workspace-wide setting
publish.workspace = true # This is a workspace-wide setting

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum.workspace = true
axum-macros.workspace = true
axum-server.workspace = true
clap.workspace = true
color-eyre.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
