[package]
name = "echo"
authors.workspace = true
edition = "2024"
publish.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv.workspace = true
serenity.workspace = true
tokio.workspace = true
